Test que verifica que al agregar 3 elementos a la lista, la misma se ordena alfabeticamente

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "chai": "^4.3.4",
+    "chai-sorted": "^0.2.0",
     "mocha": "^8.4.0",
     "nyc": "^15.1.0"
   }
